src/ida/fmod/fida_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.

! ---------------------------------------------------------------
! Programmer(s): Auto-generated by swig.
! ---------------------------------------------------------------
! SUNDIALS Copyright Start
! Copyright (c) 2002-2019, Lawrence Livermore National Security
! and Southern Methodist University.
! All rights reserved.
!
! See the top-level LICENSE and NOTICE files for details.
!
! SPDX-License-Identifier: BSD-3-Clause
! SUNDIALS Copyright End
! ---------------------------------------------------------------

module fida_mod
 use, intrinsic :: ISO_C_BINDING
 use fsundials_types
 implicit none
 private

 ! PUBLIC METHODS AND TYPES
 public :: FIDACreate
 public :: FIDAInit
 public :: FIDAReInit
 public :: FIDASStolerances
 public :: FIDASVtolerances
 public :: FIDAWFtolerances
 public :: FIDACalcIC
 public :: FIDASetNonlinConvCoefIC
 public :: FIDASetMaxNumStepsIC
 public :: FIDASetMaxNumJacsIC
 public :: FIDASetMaxNumItersIC
 public :: FIDASetLineSearchOffIC
 public :: FIDASetStepToleranceIC
 public :: FIDASetMaxBacksIC
 public :: FIDASetErrHandlerFn
 public :: FIDASetErrFile
 public :: FIDASetUserData
 public :: FIDASetMaxOrd
 public :: FIDASetMaxNumSteps
 public :: FIDASetInitStep
 public :: FIDASetMaxStep
 public :: FIDASetStopTime
 public :: FIDASetNonlinConvCoef
 public :: FIDASetMaxErrTestFails
 public :: FIDASetMaxNonlinIters
 public :: FIDASetMaxConvFails
 public :: FIDASetSuppressAlg
 public :: FIDASetId
 public :: FIDASetConstraints
 public :: FIDASetNonlinearSolver
 public :: FIDARootInit
 public :: FIDASetRootDirection
 public :: FIDASetNoInactiveRootWarn
 public :: FIDASolve
 public :: FIDAGetDky
 public :: FIDAGetWorkSpace
 public :: FIDAGetNumSteps
 public :: FIDAGetNumResEvals
 public :: FIDAGetNumLinSolvSetups
 public :: FIDAGetNumErrTestFails
 public :: FIDAGetNumBacktrackOps
 public :: FIDAGetConsistentIC
 public :: FIDAGetLastOrder
 public :: FIDAGetCurrentOrder
 public :: FIDAGetActualInitStep
 public :: FIDAGetLastStep
 public :: FIDAGetCurrentStep
 public :: FIDAGetCurrentTime
 public :: FIDAGetTolScaleFactor
 public :: FIDAGetErrWeights
 public :: FIDAGetEstLocalErrors
 public :: FIDAGetNumGEvals
 public :: FIDAGetRootInfo
 public :: FIDAGetIntegratorStats
 public :: FIDAGetNumNonlinSolvIters
 public :: FIDAGetNumNonlinSolvConvFails
 public :: FIDAGetNonlinSolvStats
 public :: FIDAGetReturnFlagName
 public :: FIDAFree
 public :: FIDABBDPrecInit
 public :: FIDABBDPrecReInit
 public :: FIDABBDPrecGetWorkSpace
 public :: FIDABBDPrecGetNumGfnEvals
 public :: FIDASetLinearSolver
 public :: FIDASetJacFn
 public :: FIDASetPreconditioner
 public :: FIDASetJacTimes
 public :: FIDASetEpsLin
 public :: FIDASetIncrementFactor
 public :: FIDAGetLinWorkSpace
 public :: FIDAGetNumJacEvals
 public :: FIDAGetNumPrecEvals
 public :: FIDAGetNumPrecSolves
 public :: FIDAGetNumLinIters
 public :: FIDAGetNumLinConvFails
 public :: FIDAGetNumJTSetupEvals
 public :: FIDAGetNumJtimesEvals
 public :: FIDAGetNumLinResEvals
 public :: FIDAGetLastLinFlag
 public :: FIDAGetLinReturnFlagName

 ! PARAMETERS
 integer(C_INT), parameter, public :: IDA_NORMAL = 1_C_INT
 integer(C_INT), parameter, public :: IDA_ONE_STEP = 2_C_INT
 integer(C_INT), parameter, public :: IDA_YA_YDP_INIT = 1_C_INT
 integer(C_INT), parameter, public :: IDA_Y_INIT = 2_C_INT
 integer(C_INT), parameter, public :: IDA_SUCCESS = 0_C_INT
 integer(C_INT), parameter, public :: IDA_TSTOP_RETURN = 1_C_INT
 integer(C_INT), parameter, public :: IDA_ROOT_RETURN = 2_C_INT
 integer(C_INT), parameter, public :: IDA_WARNING = 99_C_INT
 integer(C_INT), parameter, public :: IDA_TOO_MUCH_WORK = -1_C_INT
 integer(C_INT), parameter, public :: IDA_TOO_MUCH_ACC = -2_C_INT
 integer(C_INT), parameter, public :: IDA_ERR_FAIL = -3_C_INT
 integer(C_INT), parameter, public :: IDA_CONV_FAIL = -4_C_INT
 integer(C_INT), parameter, public :: IDA_LINIT_FAIL = -5_C_INT
 integer(C_INT), parameter, public :: IDA_LSETUP_FAIL = -6_C_INT
 integer(C_INT), parameter, public :: IDA_LSOLVE_FAIL = -7_C_INT
 integer(C_INT), parameter, public :: IDA_RES_FAIL = -8_C_INT
 integer(C_INT), parameter, public :: IDA_REP_RES_ERR = -9_C_INT
 integer(C_INT), parameter, public :: IDA_RTFUNC_FAIL = -10_C_INT
 integer(C_INT), parameter, public :: IDA_CONSTR_FAIL = -11_C_INT
 integer(C_INT), parameter, public :: IDA_FIRST_RES_FAIL = -12_C_INT
 integer(C_INT), parameter, public :: IDA_LINESEARCH_FAIL = -13_C_INT
 integer(C_INT), parameter, public :: IDA_NO_RECOVERY = -14_C_INT
 integer(C_INT), parameter, public :: IDA_NLS_INIT_FAIL = -15_C_INT
 integer(C_INT), parameter, public :: IDA_NLS_SETUP_FAIL = -16_C_INT
 integer(C_INT), parameter, public :: IDA_MEM_NULL = -20_C_INT
 integer(C_INT), parameter, public :: IDA_MEM_FAIL = -21_C_INT
 integer(C_INT), parameter, public :: IDA_ILL_INPUT = -22_C_INT
 integer(C_INT), parameter, public :: IDA_NO_MALLOC = -23_C_INT
 integer(C_INT), parameter, public :: IDA_BAD_EWT = -24_C_INT
 integer(C_INT), parameter, public :: IDA_BAD_K = -25_C_INT
 integer(C_INT), parameter, public :: IDA_BAD_T = -26_C_INT
 integer(C_INT), parameter, public :: IDA_BAD_DKY = -27_C_INT
 integer(C_INT), parameter, public :: IDA_VECTOROP_ERR = -28_C_INT
 integer(C_INT), parameter, public :: IDA_UNRECOGNIZED_ERROR = -99_C_INT
 integer(C_INT), parameter, public :: IDALS_SUCCESS = 0_C_INT
 integer(C_INT), parameter, public :: IDALS_MEM_NULL = -1_C_INT
 integer(C_INT), parameter, public :: IDALS_LMEM_NULL = -2_C_INT
 integer(C_INT), parameter, public :: IDALS_ILL_INPUT = -3_C_INT
 integer(C_INT), parameter, public :: IDALS_MEM_FAIL = -4_C_INT
 integer(C_INT), parameter, public :: IDALS_PMEM_NULL = -5_C_INT
 integer(C_INT), parameter, public :: IDALS_JACFUNC_UNRECVR = -6_C_INT
 integer(C_INT), parameter, public :: IDALS_JACFUNC_RECVR = -7_C_INT
 integer(C_INT), parameter, public :: IDALS_SUNMAT_FAIL = -8_C_INT
 integer(C_INT), parameter, public :: IDALS_SUNLS_FAIL = -9_C_INT

 ! WRAPPER DECLARATIONS
 interface
function FIDACreate() &
bind(C, name="IDACreate") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR) :: fresult
end function

function FIDAInit(ida_mem, res, t0, yy0, yp0) &
bind(C, name="IDAInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: res
real(C_DOUBLE), value :: t0
type(C_PTR), value :: yy0
type(C_PTR), value :: yp0
integer(C_INT) :: fresult
end function

function FIDAReInit(ida_mem, t0, yy0, yp0) &
bind(C, name="IDAReInit") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: t0
type(C_PTR), value :: yy0
type(C_PTR), value :: yp0
integer(C_INT) :: fresult
end function

function FIDASStolerances(ida_mem, reltol, abstol) &
bind(C, name="IDASStolerances") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: reltol
real(C_DOUBLE), value :: abstol
integer(C_INT) :: fresult
end function

function FIDASVtolerances(ida_mem, reltol, abstol) &
bind(C, name="IDASVtolerances") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: reltol
type(C_PTR), value :: abstol
integer(C_INT) :: fresult
end function

function FIDAWFtolerances(ida_mem, efun) &
bind(C, name="IDAWFtolerances") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: efun
integer(C_INT) :: fresult
end function

function FIDACalcIC(ida_mem, icopt, tout1) &
bind(C, name="IDACalcIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: icopt
real(C_DOUBLE), value :: tout1
integer(C_INT) :: fresult
end function

function FIDASetNonlinConvCoefIC(ida_mem, epiccon) &
bind(C, name="IDASetNonlinConvCoefIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: epiccon
integer(C_INT) :: fresult
end function

function FIDASetMaxNumStepsIC(ida_mem, maxnh) &
bind(C, name="IDASetMaxNumStepsIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxnh
integer(C_INT) :: fresult
end function

function FIDASetMaxNumJacsIC(ida_mem, maxnj) &
bind(C, name="IDASetMaxNumJacsIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxnj
integer(C_INT) :: fresult
end function

function FIDASetMaxNumItersIC(ida_mem, maxnit) &
bind(C, name="IDASetMaxNumItersIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxnit
integer(C_INT) :: fresult
end function

function FIDASetLineSearchOffIC(ida_mem, lsoff) &
bind(C, name="IDASetLineSearchOffIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
logical(C_BOOL), value :: lsoff
integer(C_INT) :: fresult
end function

function FIDASetStepToleranceIC(ida_mem, steptol) &
bind(C, name="IDASetStepToleranceIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: steptol
integer(C_INT) :: fresult
end function

function FIDASetMaxBacksIC(ida_mem, maxbacks) &
bind(C, name="IDASetMaxBacksIC") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxbacks
integer(C_INT) :: fresult
end function

function FIDASetErrHandlerFn(ida_mem, ehfun, eh_data) &
bind(C, name="IDASetErrHandlerFn") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_FUNPTR), value :: ehfun
type(C_PTR), value :: eh_data
integer(C_INT) :: fresult
end function

function FIDASetErrFile(ida_mem, errfp) &
bind(C, name="IDASetErrFile") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: errfp
integer(C_INT) :: fresult
end function

function FIDASetUserData(ida_mem, user_data) &
bind(C, name="IDASetUserData") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
type(C_PTR), value :: user_data
integer(C_INT) :: fresult
end function

function FIDASetMaxOrd(ida_mem, maxord) &
bind(C, name="IDASetMaxOrd") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxord
integer(C_INT) :: fresult
end function

function FIDASetMaxNumSteps(ida_mem, mxsteps) &
bind(C, name="IDASetMaxNumSteps") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_LONG), value :: mxsteps
integer(C_INT) :: fresult
end function

function FIDASetInitStep(ida_mem, hin) &
bind(C, name="IDASetInitStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: hin
integer(C_INT) :: fresult
end function

function FIDASetMaxStep(ida_mem, hmax) &
bind(C, name="IDASetMaxStep") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: hmax
integer(C_INT) :: fresult
end function

function FIDASetStopTime(ida_mem, tstop) &
bind(C, name="IDASetStopTime") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: tstop
integer(C_INT) :: fresult
end function

function FIDASetNonlinConvCoef(ida_mem, epcon) &
bind(C, name="IDASetNonlinConvCoef") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
real(C_DOUBLE), value :: epcon
integer(C_INT) :: fresult
end function

function FIDASetMaxErrTestFails(ida_mem, maxnef) &
bind(C, name="IDASetMaxErrTestFails") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: ida_mem
integer(C_INT), value :: maxnef
integer(C_INT) :: fresult
end function
